...
            "state": "translated",
            "value": "颜色"
          }
        }
      }
    },
    "Continue": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Continue"
...
            "state": "translated",
            "value": "控制中心"
          }
        }
      }
    },
    "Copied": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Copied"
...
            "state": "translated",
            "value": "保存失败"
          }
        }
      }
    },
    "Create": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Create"
...
            "state": "translated",
            "value": "尺寸"
          }
        }
      }
    },
    "Dismiss": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Dismiss"
...
            "state": "translated",
            "value": "文件"
          }
        }
      }
    },
    "Get Started": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Get Started"
...
            "state": "translated",
            "value": "前往设置"
          }
        }
      }
    },
    "History": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "History"
...
            "state": "translated",
            "value": "以后再说"
          }
        }
      }
    },
    "More": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "More"
...
            "state": "translated",
            "value": "固定到…"
          }
        }
      }
    },
    "Pinboard": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Pinboard"
...
            "state": "translated",
            "value": "本次以仅本地模式运行"
          }
        }
      }
    },
    "Save": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
...
            "state": "translated",
            "value": "设为「允许」后不再弹窗"
          }
        }
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Settings"
...
